--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = 'grid'></div>
-    
-    <script src ="etch.js"></script>
+    <div id="grid"></div>
+    <script src="etch.js"></script>
 </body>
 </html>
