--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>An Etch-a-Sketch by Alan Maginn</h1>
     <div id="grid"></div>
     <script src="etch.js"></script>
 </body>
