Make buttons update on new mode click

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="redButtonsContainer">
                 <button id="gridSelect" class="redButtons">GRID SIZE</button>
                 <button id="colorButton" class="redButtons">COLOR</button>
-                <button id="classicButton" class="redButtons">CLASSIC</button>
+                <button id="classicButton" class="redButtons active">CLASSIC</button>
                 <button id="eraseButton" class="redButtons">ERASER</button>
                 <button id="clearButton" class="redButtons">CLEAR</button>
             </div>
